sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1h/errors.dfrouter
Error: Attribute 'pos' is missing in definition of detectorDefinition 'MQ11Fs2'.
Quitting (on error).
